[package]
name = "pra"
version = "0.0.0"
edition = "2021"
description = "Print Random ASCII"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = {version = "4.4.16", features = ["derive"]}
